@@ -12,6 +12,7 @@
 	* Fixed Bug #586631: 'Rebuilding is too slow'.
 	* Fixed Bug #598700: 'The server needs to show unhandled exceptions'.
 	* Fixed Bug #598609: 'Large responses break the server'.
+	* Fixed Bug #598615: 'Application console output should show on the server'.
 
 2010-03-02 Release 0.4.0
 	* Fixed bug #511025: 'Controller template uses wrong view on create fail'.
